# cog

./: CMakeLists.txt  README
COG/: CMakeLists.txt
COG/include/COG/: base_aligned.h  base_type.h  cog.h  geom_aabbox.h  geom_base.h  geom_bezier.h  geom_frustum.h  vmath_base.h  vmath_base_sse.h  vmath_bool.h  vmath_bool_sse.h  vmath_const.h  vmath_dualquat.h  vmath_matrix.h  vmath_quat.h  vmath_transform.h  vmath_vector.h
COG/source/: geom_bezier.cpp  vmath_base.cpp  vmath_base_sse.cpp
COG/test/geom/: aabbox.cpp  bezier.cpp  frustum.cpp  plane.cpp  ray.cpp  sphere.cpp
COG/test/misc/: pascaltri.cpp
COG/test/vmath/: aossoa.cpp  boolean.cpp  dualquat.cpp  float.cpp  matrix3.cpp  matrix4.cpp  quaternion.cpp  transform.cpp  unit_test.h  vec_float.cpp  vector3.cpp  vector4.cpp
GLion/: CMakeLists.txt
GLion/include/GLion/: GLion.h  IRoot.h  _Prerequisites.h  glion.h
GLion/source/: GLion.cpp  glion.cpp
GLion/source/macosx/: CRoot.h  CRoot.mm
GLion/test/: CMakeLists.txt  main.cpp
LEO/: CMakeLists.txt
LEO/include/Leo/: ICompositor.h  IDisplay.h  IRenderTarget.h  IRoot.h  IViewport.h  Leo.h  _Prerequisites.h
LEO/source/: CDisplay.cpp  CDisplay.h  CRenderTarget.cpp  CRenderTarget.h  CRoot.cpp  CRoot.h  CViewport.cpp  CViewport.h
LEO/source/macosx/: CDisplayNS.h  CDisplayNS.mm  CRootNS.h  CRootNS.mm  Main.mm
LEO/source/mswindows/: CRootWIN.cpp  CRootWIN.h  Main.cpp
LEO/test/: CMakeLists.txt  main.cpp
cmake/: CheckTargetCPU.cmake  CheckTargetOS.cmake  CheckTargetOpenGL.cmake  _FindOpenGL.cmake  check_1_cpu.cpp  check_common.cpu.cpp  config_x86.cmake  config_x86_family.cmake
demo/: CMakeLists.txt
demo/basic_empty/: main.cpp
demo/basic_projection/: main.cpp
demo/basic_quaternion/: CMakeLists.txt
demo/basic_view_transform/: main.cpp
demo/common/: CMakeLists.txt
demo/common/include/: demo_common.h  demo_glut.h
demo/common/include/GLEW/: glew.h
demo/common/source/: demo_common.cpp  glew.c
demo/samples/: CMakeLists.txt
demo/samples/basic_empty/: main.cpp
demo/samples/basic_model_transform/: main.cpp
demo/samples/basic_orthographic/: main.cpp
demo/samples/basic_perspective/: main.cpp
demo/samples/basic_projection/: main.cpp
demo/samples/basic_quaternion/: main.cpp
demo/samples/basic_view_transform/: main.cpp
demo/samples/vertex_blending/: main.cpp
include/COG/: base_aligned.h  base_atomic.h  base_platform.h  base_type.h  cog.h  geom_aabbox.h  geom_base.h  geom_frustum.h  vmath_bool.h  vmath_const.h  vmath_const2.h  vmath_dualquat.h  vmath_quat.h  vmath_transform.h  vmath_vector.h
include/cog/: cog.h  vmath_base.h  vmath_base_sse.h  vmath_const.h  vmath_quat.h  vmath_transform.h  vmath_vector.h
source/: vmath_base.cpp  vmath_base_sse.cpp
test/: CMakeLists.txt
test/base/: aligned.cpp  atomic.cpp  types.cpp
test/geom/: aabbox.cpp  frustum.cpp  plane.cpp  ray.cpp  sphere.cpp
test/vmath/: aossoa.cpp  dualquat.cpp  matrix3.cpp  matrix4.cpp  quaternion.cpp  transform.cpp  unit_test.h  vec_float.cpp  vector3.cpp  vector4.cpp
